# hotcarpet

./: .gitignore  .octocov.yml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  hotspots.yml  release.yml
coverage-reports/moznion/hotcarpet/: report.json
src/: cli.rs  config.rs  engine.rs  git_history.rs  main.rs  output.rs
src/analyzer/: golang.rs  mod.rs  rust.rs  typescript.rs
