[package]
name = "hotcarpet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
comfy-table = "7.2.2"
git2 = "0.21.0"
globset = "0.4.18"
oxc_allocator = "0.136"
oxc_ast = "0.136"
oxc_ast_visit = "0.136"
oxc_parser = "0.136"
oxc_span = "0.136"
oxc_syntax = "0.136"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
